Cleanup and progress on reimplementing Solr client interactions